tests/compile_fail/declare_scheduler_binary_path_and_kernel_builtin.stderr
error: declare_scheduler!: more than one scheduler source declared. Pick exactly one of `binary`, `binary_path`, or the `kernel_builtin_enable` + `kernel_builtin_disable` pair. Each maps to a different `SchedulerSpec` variant (`Discover`, `Path`, `KernelBuiltin`) and they cannot stack.
 --> tests/compile_fail/declare_scheduler_binary_path_and_kernel_builtin.rs:5:20
  |
5 | declare_scheduler!(BINARY_PATH_AND_KERNEL_BUILTIN, {
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
